# protobridge

./: CMakeLists.txt  LICENSE  README.md
inc/: protobridge.h
src/: protobridge.cpp
